# conways-game-of-life

./: .gitignore.txt  CMakeLists.txt  README.md  core.c  core.h  main.c  render.cpp  render.h
